data/derived/sp14/progs/unify/prog0588.ml.out
Characters 400-404:
  | Acossin(e1, e2) -> (acos(eval(e1)) *. asin(eval(e2))) *. 2.0 /. (pi *. pi);;
                                 ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
